--- a/package.json
+++ b/package.json
@@ -2,18 +2,23 @@
   "name": "core-data-loading",
   "version": "1.0.0",
   "description": "Qlik Core data loading examples",
+  "author": "QlikTech International AB",
+  "private": true,
+  "license": "MIT",
+  "main": "index.js", 
   "dependencies": {
     "enigma.js": "^2.2.1",
     "ws": "^6.0.0"
   },
-  "main": "index.js",
   "scripts": {
-    "start": "node index.js "
+    "start": "node index.js"
   },
-  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/qlik-oss/core-data-loading.git"
   },
-  "license": "MIT"
+  "devDependencies": {},
+  "engines": {
+    "node": ">=8.11.3"
+  }
 }
