--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "main": "index.js",
   "dependencies": {
+    "easy-table": "^1.1.1",
     "enigma.js": "^2.2.1",
     "ws": "^6.0.0"
   },
