--- a/package.json
+++ b/package.json
@@ -12,13 +12,19 @@
     "ws": "^6.0.0"
   },
   "scripts": {
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix .",
     "start": "node index.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/qlik-oss/core-data-loading.git"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "eslint": "3.19.0",
+    "eslint-config-airbnb-base": "11.1.3",
+    "eslint-plugin-import": "2.2.0"
+  },
   "engines": {
     "node": ">=8.11.3"
   }
