--- a/.editorconfig
+++ b/.editorconfig
@@ -10,3 +10,7 @@ indent_style = space
 indent_size = 2
 end_of_line = lf
 insert_final_newline = true
+
+# Qlik script files
+[*.qvs]
+indent_size = 4
