Added integration tests

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "scripts": {
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
-    "start": "node index.js"
+    "start": "node index.js",
+    "test": "node test/integration.js"
   },
   "repository": {
     "type": "git",
