--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,3 +14,6 @@ jobs:
       - run:
           name: Run ESLint
           command: npm run lint
+      - run:
+          name: Run Integration Tests
+          command: npm run test
