--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,16 +14,13 @@ jobs:
       - run:
           name: Run ESLint
           command: npm run lint
-      - run:
-          name: Run Integration Tests
-          command: npm run test
       - setup_remote_docker
-      - run:
-          name: Login to Docker
-          command: docker login -u "$DOCKER_USER" -p "$DOCKER_PASSWORD"
       - run:
           name: Spin up environment
           command: ACCEPT_EULA=yes docker-compose up -d
       - run:
-          name: Execute tests on remote dockers
-          command: npm run test
+          name: Run Integration Tests
+          command: |
+#            docker cp ./ node-test-runner:./reload-runner/
+            docker exec node-test-runner sh -c 'npm install'
+            docker exec node-test-runner sh -c 'TEST_HOST=qix-engine node index.js'
