--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,5 +21,7 @@ jobs:
       - run:
           name: Run Integration Tests
           command: |
+            docker cp ./ node-test-runner:./
+            docker exec node-test-runner sh -c 'cd /reload-runner'
             docker exec node-test-runner sh -c 'npm install'
             docker exec node-test-runner sh -c 'TEST_HOST=qix-engine node index.js'
