--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,6 +22,5 @@ jobs:
           name: Run Integration Tests
           command: |
             docker cp ./ node-test-runner:./
-            docker exec node-test-runner sh -c 'cd /reload-runner'
-            docker exec node-test-runner sh -c 'npm install'
-            docker exec node-test-runner sh -c 'TEST_HOST=qix-engine node index.js'
+            docker exec node-test-runner sh -c 'cd ./reload-runner && npm install'
+            docker exec node-test-runner sh -c 'cd ./reload-runner && TEST_HOST=qix-engine node index.js'
