--- a/.eslintrc
+++ b/.eslintrc
@@ -5,8 +5,7 @@
     "max-len": "off",
     "import/no-unresolved": 0, // Otherwise npm install had to be executed in each example
     "class-methods-use-this": 0,
-    "no-underscore-dangle": 0,
-    "eslint linebreak-style": ["error", "windows"]
+    "no-underscore-dangle": 0
   },
   "env": {
     "node": true
